Added some display of docent data, including birthday and dates

--- a/public/css/elysium.css
+++ b/public/css/elysium.css
@@ -144,6 +144,10 @@ form .glyph-list li .glyph-list-preview .glyphicon-class {
 	color: dimgray;
 }
 
+.docent-detail .col-md-8 {
+	padding-right: 0;
+}
+
 .btn-edit-inline {
 	float: right;
 	opacity: 0.2;
