Added edit form access for docent data (including addition of date picker)

--- a/public/css/elysium.css
+++ b/public/css/elysium.css
@@ -19,7 +19,7 @@
 	color: #494949;
 }
 .navbar.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-	color: #2e820f;
+	color: #9acd32;
 	background-color: transparent;
 }
 
