--- a/public/css/elysium.css
+++ b/public/css/elysium.css
@@ -1,6 +1,6 @@
 /** General **/
 body, body div {
-	font-family: Verdana, Geneva, sans-serif;
+	font-family: Tahoma, Geneva, sans-serif;
 }
 
 #header .navbar-brand {
