Signed-off-by: blubberblaseTR <baris_er@yahoo.de>

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -998,8 +998,10 @@ h6,
 .h3,
 .h4,
 .h5,
-.h6 {
-  font-family: inherit;
+.h6,
+/** Änderungen von ERBA wegen Detailseite col-md8 und 4**/
+{
+  font-family: Tahoma;
   font-weight: 500;
   line-height: 1.1;
   color: inherit;
