--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -998,9 +998,8 @@ h6,
 .h3,
 .h4,
 .h5,
-.h6
-{
-  font-family: Tahoma;
+.h6 {
+  font-family: inherit;
   font-weight: 500;
   line-height: 1.1;
   color: inherit;
