--- a/public/css/elysium.css
+++ b/public/css/elysium.css
@@ -1,6 +1,14 @@
 /** General **/
 
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+{
+  font-family: Tahoma, sans-serif;
+}
 
 body, body div {
 	font-family: Candara, Tahoma, sans-serif;
@@ -80,7 +88,7 @@ body, body div {
 	color: #698b22;
 }
 
-body a {
+body a, ul.pagination li a {
 	color: #698b22;
 }
 
@@ -88,10 +96,13 @@ body a:hover, body a:active {
 	color: #80a525;
 }
 
-body .label.label-primary {
+body .label.label-primary, ul.pagination li.active span  {
 	background-color: #698b22;
 }
 
+ul.pagination li.active span  {
+	border-color: #5d7c1f;
+}
 
 body .btn-primary {
 	background-image: -webkit-linear-gradient(top, #80a525 0%, #608020 100%);
@@ -109,7 +120,6 @@ body .btn-primary:hover, body .btn-primary:focus {
 	background-image: linear-gradient(to bottom, #97c32c 0%, #82a927 100%);
 	border-color: #57741d;
 	background-position: 0;
-
 }
 
 .btn-add span {
