--- a/public/css/bootstrap-theme.css
+++ b/public/css/bootstrap-theme.css
@@ -1,12 +1,12 @@
 /*!
- * Bootstrap v3.3.1 (http://getbootstrap.com)
+ * Bootstrap v3.3.2 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=2dad32de50572312118f)
- * Config saved to config.json and https://gist.github.com/2dad32de50572312118f
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=bca74672ec56af64ec23)
+ * Config saved to config.json and https://gist.github.com/bca74672ec56af64ec23
  */
 .btn-default,
 .btn-primary,
@@ -67,6 +67,7 @@
   background-color: #e0e0e0;
   border-color: #dbdbdb;
 }
+.btn-default.disabled,
 .btn-default:disabled,
 .btn-default[disabled] {
   background-color: #e0e0e0;
@@ -92,6 +93,7 @@
   background-color: #5b761b;
   border-color: #556e19;
 }
+.btn-primary.disabled,
 .btn-primary:disabled,
 .btn-primary[disabled] {
   background-color: #5b761b;
@@ -117,6 +119,7 @@
   background-color: #445a16;
   border-color: #3e5214;
 }
+.btn-success.disabled,
 .btn-success:disabled,
 .btn-success[disabled] {
   background-color: #445a16;
@@ -142,6 +145,7 @@
   background-color: #2aabd2;
   border-color: #28a4c9;
 }
+.btn-info.disabled,
 .btn-info:disabled,
 .btn-info[disabled] {
   background-color: #2aabd2;
@@ -167,6 +171,7 @@
   background-color: #eb9316;
   border-color: #e38d13;
 }
+.btn-warning.disabled,
 .btn-warning:disabled,
 .btn-warning[disabled] {
   background-color: #eb9316;
@@ -192,6 +197,7 @@
   background-color: #c12e2a;
   border-color: #b92c28;
 }
+.btn-danger.disabled,
 .btn-danger:disabled,
 .btn-danger[disabled] {
   background-color: #c12e2a;
