--- a/public/css/elysium.css
+++ b/public/css/elysium.css
@@ -269,7 +269,7 @@ form .glyph-list li .glyph-list-preview .glyphicon-class {
 }
 
 .docent-detail .col-md-8 {
-	padding-right: 0;
+	word-wrap: break-word;
 }
 
 /* Phone number list */
