--- a/public/css/elysium.css
+++ b/public/css/elysium.css
@@ -145,6 +145,18 @@ span.label-course-tag {
 	text-align: right;
 }
 
+.row.docent-import-begin {
+	margin-top:25px;
+}
+
+.docent-import-begin label {
+	margin-bottom:15px;
+}
+
+.docent-import-begin .panel {
+	height: 100px;
+}
+
 .panel-docent-import-docent textarea {
 	min-height: 200px;
 }
