Updated bootstrap Corrected typos in status edit

--- a/public/css/elysium.css
+++ b/public/css/elysium.css
@@ -1,13 +1,13 @@
 /** General **/
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
+body h1,
+body h2,
+body h3,
+body h4,
+body h5,
+body h6
 {
-  font-family: Tahoma, sans-serif;
+  font-family: Candara, sans-serif;
 }
 
 #header .navbar-brand {
