--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=bca74672ec56af64ec23)
- * Config saved to config.json and https://gist.github.com/bca74672ec56af64ec23
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=0d80e7406450a963bae5)
+ * Config saved to config.json and https://gist.github.com/0d80e7406450a963bae5
  */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
@@ -1074,7 +1074,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: Candara, Tahoma, sans-serif;
+  font-family: Tahoma, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333333;
@@ -5595,7 +5595,7 @@ button.close {
   z-index: 1070;
   display: block;
   visibility: visible;
-  font-family: Candara, Tahoma, sans-serif;
+  font-family: Tahoma, sans-serif;
   font-size: 12px;
   font-weight: normal;
   line-height: 1.4;
@@ -5702,7 +5702,7 @@ button.close {
   display: none;
   max-width: 276px;
   padding: 1px;
-  font-family: Candara, Tahoma, sans-serif;
+  font-family: Tahoma, sans-serif;
   font-size: 14px;
   font-weight: normal;
   line-height: 1.42857143;
